labs/security/kubernetes-scanning/kyverno/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Image Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Using the latest image tag makes deployments non-repeatable and unsafe.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-fixed-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Images must not use the latest tag. Use a fixed version tag."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
